static_library("myuart") {
    sources = [
        "B6_uart_example.c"
    ]
    include_dirs = [
        "//utils/native/lite/include",
        "//base/iot_hardware/peripheral/interfaces/kits",
        "//vendor/bearpi/bearpi_hm_nano/common/iot_hardware_hals/include"
    ]
    deps = [ "//vendor/bearpi/bearpi_hm_nano/common/iot_hardware_hals:bearpi_iot_hardware_hals" ]
}
