static_library("myadc_tem") {
    sources = [
        "src/DS18B20.c",
        "adc_tem_example.c"
    ]
    include_dirs = [
        "//utils/native/lite/include",
        "//base/iot_hardware/peripheral/interfaces/kits",
        "//device/hisilicon/hispark_pegasus/sdk_liteos/platform/os/Huawei_LiteOS/components/lib/libc/musl/include",
        "//vendor/bearpi/bearpi_hm_nano/common/iot_hardware_hals/include",
        "include"
    ]
    deps = [ "//vendor/bearpi/bearpi_hm_nano/common/iot_hardware_hals:bearpi_iot_hardware_hals" ]
}
