static_library("max30102_demo") {
    sources = [
        #"src/algorithm.c", 
        "max30102/max30102.c",
        #"myiic.c",
        #"mymain.c",
        #"mymain0.c",
        #"oled_i2c.c",
        #"src/max30102_hello.c",
        #"src/blood.c",
        "main.c",
    ]

    include_dirs = [
        "//utils/native/lite/include",
        "//kernel/liteos_m/components/cmsis/2.0",
        "//base/iot_hardware/peripheral/interfaces/kits",
        "//applications/sample/wifi-iot/app/max30102_demo",
        "include",
        "src",
        "max30102",
        "//device/hisilicon/hispark_pegasus/sdk_liteos/platform/os/Huawei_LiteOS/components/lib/libc/musl/include"
        ]
}